--- a/lab/media-player-lock-screen.html
+++ b/lab/media-player-lock-screen.html
@@ -21,6 +21,7 @@
         }
 
         .media-player-grid {
+            position: relative;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -36,6 +37,81 @@
             border: 1px solid oklch(from #444 l c h / 0.5);
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
             transition: background-image 0.5s ease-in-out;
+            overflow: clip;
+        }
+
+        .media-player__equalizer {
+            position: absolute;
+            inset: 0;
+            background: oklch(from #1a1a1a l c h / 0.9);
+            backdrop-filter: blur(20px);
+            border-radius: inherit;
+            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.75rem;
+            opacity: 0;
+            pointer-events: none;
+            transform: scale(0.95);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            z-index: 20;
+        }
+
+        .media-player__equalizer.active {
+            opacity: 1;
+            pointer-events: all;
+            transform: scale(1);
+        }
+
+        .eq-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: #fff;
+            flex-shrink: 0;
+        }
+
+        .eq-header h3 {
+            margin: 0;
+            font-size: 0.875rem;
+            font-weight: 500;
+            letter-spacing: 0.025em;
+        }
+
+        .eq-close {
+            background: transparent !important;
+            border: none !important;
+            padding: 0 !important;
+            inline-size: 1.5rem !important;
+            block-size: 1.5rem !important;
+            opacity: 0.7;
+            transition: opacity 0.2s ease !important;
+        }
+
+        .eq-close:hover {
+            opacity: 1;
+        }
+
+        .eq-close svg {
+            inline-size: 18px !important;
+            block-size: 18px !important;
+        }
+
+        .eq-grid {
+            flex: 1;
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 0.5rem;
+            align-items: stretch;
+            min-height: 0;
+        }
+
+        .media-player__equalizer__slider {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.5rem;
         }
 
         .media-player-grid__row {
@@ -50,12 +126,22 @@
             margin-block-start: 0.5rem;
         }
 
-        .grid-item--yt {
+        .grid-item--eq,
+        .grid-item--phone {
             grid-column: 1;
+            inline-size: 1.5rem !important;
+            block-size: 1.5rem !important;
+            padding: initial !important;
         }
 
         .grid-item--phone {
             grid-column: 8;
+        }
+
+        .grid-item--eq svg,
+        .grid-item--phone svg {
+            inline-size: 16px;
+            block-size: 16px;
         }
 
         .media-player__meta {
@@ -130,19 +216,6 @@
             transition: background-color 0.5s ease;
         }
 
-        .grid-item--yt,
-        .grid-item--phone {
-            inline-size: 1.5rem !important;
-            block-size: 1.5rem !important;
-            padding: initial !important;
-        }
-
-        .grid-item--yt svg,
-        .grid-item--phone svg {
-            inline-size: 16px;
-            block-size: 16px;
-        }
-
         .media-player__meta__title {
             font-size: 0.875rem;
             font-weight: 600;
@@ -162,6 +235,7 @@
 
         .progress-slider {
             -webkit-appearance: none;
+            appearance: none;
             width: 100%;
             background: transparent;
             outline: none;
@@ -200,6 +274,63 @@
         .icon-btn--brand svg {
             fill: oklch(from #fff l c h / 0.8);
         }
+
+        /* Option Button Special Styles */
+        .media-player__option {
+            position: relative;
+        }
+
+        .media-player__option::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            border-radius: inherit;
+            border: 2px solid oklch(from #fff l c h / 0.5);
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .media-player__option.animate-outline::after {
+            animation: media-outline-expand 0.32s ease-out forwards;
+        }
+
+        @keyframes media-outline-expand {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
+
+            100% {
+                transform: scale(1.6);
+                opacity: 0;
+            }
+        }
+
+        @keyframes media-pulse {
+
+            0%,
+            100% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.15);
+            }
+        }
+
+        .pulse {
+            animation: media-pulse 0.3s ease-in-out;
+        }
+
+        @keyframes media-rewind-rotate {
+            50% {
+                transform: rotate(-25deg);
+            }
+        }
+
+        .animate-rewind {
+            animation: media-rewind-rotate 0.2s ease-out;
+        }
     </style>
 </head>
 
@@ -207,10 +338,10 @@
 
     <section class="media-player-grid">
         <article class="media-player-grid__row">
-            <button class="grid-item--yt icon-btn--brand themed-background" title="YouTube Music">
-                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <button class="grid-item--eq icon-btn--brand themed-background" title="Equalizer">
+                <svg viewBox="0 -960 960 960" xmlns="http://www.w3.org/2000/svg">
                     <path
-                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-2.5-12.5v9l7.5-4.5-7.5-4.5z" />
+                        d="M280-240v-480h80v480h-80ZM440-80v-800h80v800h-80ZM120-400v-160h80v160h-80Zm480 160v-480h80v480h-80Zm160-160v-160h80v160h-80Z" />
                 </svg>
             </button>
             <button class="grid-item--phone icon-btn--brand themed-background" title="This Phone">
@@ -245,43 +376,120 @@
                     <path d="M640-240v-480h80v480h-80ZM280-240v-480l280 240-280 240Z" />
                 </svg>
             </button>
-            <button class="media-player__like" title="Like">
+            <button class="media-player__rewind" title="Rewind 10s">
                 <svg viewBox="0 -960 960 960">
                     <path
-                        d="M720-120H280v-520l280-280 50 50q7 7 11.5 19t4.5 23v14l-44 174h258q32 0 56 24t24 56v80q0 7-2 15t-4 15L794-168q-9 20-30 34t-44 14Zm-360-80h360l120-280v-80H480l54-220-174 174v406Zm0-406v406-406Zm-80-34v80H160v360h120v80H80v-520h200Z" />
+                        d="M480-80q-75 0-140.5-28.5t-114-77q-48.5-48.5-77-114T120-440h80q0 117 81.5 198.5T480-160q117 0 198.5-81.5T760-440q0-117-81.5-198.5T480-720h-6l62 62-56 58-160-160 160-160 56 58-62 62h6q75 0 140.5 28.5t114 77q48.5 48.5-77 114T840-440q0 75-28.5 140.5t-77 114q-48.5 48.5-114 77T480-80ZM360-320v-180h-60v-60h120v240h-60Zm140 0q-17 0-28.5-11.5T460-360v-160q0-17 11.5-28.5T500-560h80q17 0 28.5 11.5T620-520v160q0 17-11.5 28.5T580-320h-80Zm20-60h40v-120h-40v120Z" />
                 </svg>
             </button>
-            <button class="media-player__random" title="Random">
+            <button class="media-player__option" title="Random (Mode)">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.45 20 9.5V4h-5.5zm.59 11.59l-1.41-1.41-1.42 1.41 1.42 1.41 1.41-1.41z" />
                 </svg>
             </button>
         </article>
+        <div class="media-player__equalizer">
+            <div class="eq-header">
+                <h3>Equalizer</h3>
+                <button class="eq-close" title="Close">
+                    <svg viewBox="0 -960 960 960">
+                        <path
+                            d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
+                    </svg>
+                </button>
+            </div>
+            <div class="eq-grid">
+                <!-- Dynamically populated sliders -->
+            </div>
+        </div>
     </section>
 
     <audio id="audio-player"></audio>
 
     <script type="module">
         import { MediaPlayerCore } from '../scripts/media/MediaPlayerCore.js';
+        import { Equalizer } from '../scripts/media/Equalizer.js';
         import { UI } from '../scripts/media/MediaPlayerUI.js';
-        import { SVG_PATHS } from '../scripts/media/Constants.js';
+        import { SVG_PATHS, EQ_CONFIG } from '../scripts/media/Constants.js';
 
         const audio = document.getElementById('audio-player');
         const core = new MediaPlayerCore(audio);
+        const eq = new Equalizer(audio);
 
         const container = document.querySelector('.media-player-grid');
+        const eqContainer = document.querySelector('.media-player__equalizer');
+        const eqGrid = document.querySelector('.eq-grid');
+        const eqBtn = document.querySelector('.grid-item--eq');
+        const eqCloseBtn = document.querySelector('.eq-close');
+
         const titleEl = document.querySelector('.media-player__meta__title');
         const artistEl = document.querySelector('.media-player__meta__artist');
         const playBtn = document.querySelector('.media-player__play-pause');
         const prevBtn = document.querySelector('.media-player__prev');
         const nextBtn = document.querySelector('.media-player__next');
-        const likeBtn = document.querySelector('.media-player__like');
-        const randomBtn = document.querySelector('.media-player__random');
+        const rewindBtn = document.querySelector('.media-player__rewind');
+        const optionBtn = document.querySelector('.media-player__option');
+        const optionSvg = optionBtn.querySelector('svg');
+        const optionPath = optionBtn.querySelector('svg path');
         const slider = document.querySelector('.progress-slider');
 
-        let isLiked = false;
         let isRandom = false;
+        let likedTracks = new Set(); // Track liked track IDs
+        let currentMode = 'random'; // 'random' or 'like'
+
+        const MODE_ICONS = {
+            random: "M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.45 20 9.5V4h-5.5zm.59 11.59l-1.41-1.41-1.42 1.41 1.42 1.41 1.41-1.41z",
+            like: SVG_PATHS.LIKE,
+            likeFilled: SVG_PATHS.LIKE_FILLED
+        };
+
+        const updateOptionUI = () => {
+            const isLiked = core.currentTrack && likedTracks.has(core.currentTrack.id);
+            if (currentMode === 'random') {
+                optionSvg.setAttribute('viewBox', '0 0 24 24');
+                optionPath.setAttribute('d', MODE_ICONS.random);
+                optionBtn.title = 'Random (Mode)';
+                optionBtn.style.color = isRandom ? 'oklch(0.6 0.2 260 / 0.8)' : 'white';
+            } else {
+                optionSvg.setAttribute('viewBox', '0 -960 960 960');
+                optionPath.setAttribute('d', isLiked ? MODE_ICONS.likeFilled : MODE_ICONS.like);
+                optionBtn.title = 'Like (Mode)';
+                optionBtn.style.color = isLiked ? 'oklch(0.6 0.2 260 / 0.8)' : 'white';
+            }
+        };
+
+        // Init EQ
+        EQ_CONFIG.forEach((config, index) => {
+            const sliderWrapper = document.createElement('div');
+            sliderWrapper.className = 'media-player__equalizer__slider';
+            sliderWrapper.innerHTML = `
+                <div class="eq-slider__wrapper">
+                    <div class="eq-slider__track"></div>
+                    <div class="eq-slider__fill"></div>
+                    <div class="eq-slider__thumb"></div>
+                    <input type="range" min="-12" max="12" value="0" step="0.1" aria-label="${config.label}">
+                </div>
+                <span class="eq-slider__label">${config.label}</span>
+            `;
+            const input = sliderWrapper.querySelector('input');
+            input.addEventListener('input', (e) => {
+                eq.setGain(index, parseFloat(e.target.value));
+                UI.updateSliderVisuals(e.target);
+            });
+            eqGrid.appendChild(sliderWrapper);
+            UI.updateSliderVisuals(input);
+        });
+
+        eqBtn.addEventListener('click', () => {
+            eq.init();
+            eq.resume();
+            eqContainer.classList.add('active');
+        });
+
+        eqCloseBtn.addEventListener('click', () => {
+            eqContainer.classList.remove('active');
+        });
 
         core.subscribe((event, data) => {
             if (event === 'trackChanged') {
@@ -290,6 +498,7 @@
                 slider.value = 0;
                 UI.updateBackgroundArt(container, data);
                 UI.applyAccentColor(container, data, '--themed-background');
+                updateOptionUI();
             }
             if (event === 'play' || event === 'pause') {
                 UI.updatePlayIcon(playBtn, audio.paused);
@@ -313,17 +522,43 @@
         prevBtn.addEventListener('click', () => core.prev());
         nextBtn.addEventListener('click', () => core.next());
 
-        likeBtn.addEventListener('click', () => {
-            isLiked = !isLiked;
-            const path = likeBtn.querySelector('svg path');
-            path.setAttribute('d', isLiked ? SVG_PATHS.LIKE_FILLED : SVG_PATHS.LIKE);
-            likeBtn.style.color = isLiked ? 'oklch(0.6 0.2 260 / 0.8)' : 'white';
+        rewindBtn.addEventListener('click', () => {
+            audio.currentTime = Math.max(0, audio.currentTime - 10);
+            rewindBtn.classList.add('animate-rewind');
+            setTimeout(() => rewindBtn.classList.remove('animate-rewind'), 200);
         });
 
-        randomBtn.addEventListener('click', () => {
-            isRandom = !isRandom;
-            randomBtn.style.color = isRandom ? 'oklch(0.6 0.2 260 / 0.8)' : 'white';
-            if (isRandom) core.shuffle();
+        // Option Button Logic
+        let optionTimer;
+        let isLongPress = false;
+
+        optionBtn.addEventListener('mousedown', () => {
+            isLongPress = false;
+            optionTimer = setTimeout(() => {
+                isLongPress = true;
+                currentMode = currentMode === 'random' ? 'like' : 'random';
+                optionBtn.classList.add('animate-outline', 'pulse');
+                if (navigator.vibrate) navigator.vibrate(50);
+                updateOptionUI();
+                setTimeout(() => optionBtn.classList.remove('animate-outline', 'pulse'), 320);
+            }, 500);
+        });
+
+        const cancelOptionPress = () => clearTimeout(optionTimer);
+        ['mouseup', 'mouseleave', 'touchend'].forEach(evt => optionBtn.addEventListener(evt, cancelOptionPress));
+
+        optionBtn.addEventListener('click', () => {
+            if (isLongPress) return;
+            if (currentMode === 'random') {
+                isRandom = !isRandom;
+                if (isRandom) core.shuffle();
+                else core.loadTrack(core.tracks.indexOf(core.currentTrack)); // Reset to linear
+            } else {
+                const trackId = core.currentTrack.id;
+                if (likedTracks.has(trackId)) likedTracks.delete(trackId);
+                else likedTracks.add(trackId);
+            }
+            updateOptionUI();
         });
 
         core.loadTrack(0);
